fixing contrast

--- a/styles/small.css
+++ b/styles/small.css
@@ -136,7 +136,7 @@ section:nth-child(3){
 }
 
 section:nth-child(3) a{
-    color: rgb(38, 117, 206);
+    color: rgb(5, 52, 105);
     margin-left: 1rem;
   
 }
